--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Imports:
     jsonlite (>= 1.1),
     readtext,
     dplyr,
-    quanteda
+    quanteda (>= 2.0)
 Suggests:
     knitr,
     testthat
