--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,37 +6,58 @@ export(correct_ocr)
 export(detect_lang)
 export(get_subcorpus_by_id)
 export(get_text_by_id)
+export(tagfilter_agriculture)
 export(tagfilter_animal)
 export(tagfilter_animalraw)
+export(tagfilter_antique)
+export(tagfilter_art)
 export(tagfilter_bag)
+export(tagfilter_barrel)
+export(tagfilter_bathobject)
 export(tagfilter_bed)
+export(tagfilter_bedding)
 export(tagfilter_bizpromo)
 export(tagfilter_bling)
 export(tagfilter_board)
 export(tagfilter_building)
 export(tagfilter_bureau)
 export(tagfilter_cabinet)
+export(tagfilter_cane)
+export(tagfilter_carpet)
+export(tagfilter_carriage)
 export(tagfilter_chair)
 export(tagfilter_charity)
 export(tagfilter_churchseat)
 export(tagfilter_cloth)
 export(tagfilter_clothing)
+export(tagfilter_coal)
+export(tagfilter_container)
 export(tagfilter_cooking)
 export(tagfilter_costume)
 export(tagfilter_cutlery)
 export(tagfilter_divider)
 export(tagfilter_domestic)
+export(tagfilter_dung)
+export(tagfilter_extinguisher)
+export(tagfilter_feed)
 export(tagfilter_finance)
+export(tagfilter_firestart)
+export(tagfilter_firework)
 export(tagfilter_game)
 export(tagfilter_garden)
+export(tagfilter_glasses)
 export(tagfilter_grocery)
 export(tagfilter_hand)
 export(tagfilter_handkerchief)
+export(tagfilter_hay)
 export(tagfilter_headdress)
+export(tagfilter_health)
+export(tagfilter_homedeco)
 export(tagfilter_household_goods)
-export(tagfilter_household_textile)
 export(tagfilter_info)
 export(tagfilter_instrument)
+export(tagfilter_jewellery)
+export(tagfilter_key)
 export(tagfilter_kitchen)
 export(tagfilter_knitting)
 export(tagfilter_labor)
@@ -45,36 +66,55 @@ export(tagfilter_lotto)
 export(tagfilter_measure)
 export(tagfilter_mercery)
 export(tagfilter_mirror)
-export(tagfilter_mischoushold)
+export(tagfilter_mischousehold)
+export(tagfilter_miscobject)
+export(tagfilter_naturalia)
 export(tagfilter_neck)
 export(tagfilter_other)
 export(tagfilter_outerwear)
 export(tagfilter_petobject)
 export(tagfilter_placement)
-export(tagfilter_plantobject)
+export(tagfilter_plant)
 export(tagfilter_plantraw)
 export(tagfilter_print)
+export(tagfilter_pushchair)
 export(tagfilter_real_estate)
+export(tagfilter_riding)
+export(tagfilter_rope)
 export(tagfilter_shoes)
+export(tagfilter_shopequip)
 export(tagfilter_sleepwear)
+export(tagfilter_soil)
 export(tagfilter_spinning)
+export(tagfilter_stationary)
 export(tagfilter_storage)
 export(tagfilter_stove)
 export(tagfilter_suitcase)
 export(tagfilter_table)
+export(tagfilter_tablelinen)
 export(tagfilter_tableware)
+export(tagfilter_tavernobject)
 export(tagfilter_texmaterial)
 export(tagfilter_textile)
 export(tagfilter_things)
 export(tagfilter_timepiece)
+export(tagfilter_tobacco)
+export(tagfilter_tool)
 export(tagfilter_toy)
 export(tagfilter_transport)
+export(tagfilter_trolley)
 export(tagfilter_umbrella)
 export(tagfilter_underwear)
 export(tagfilter_uniform)
 export(tagfilter_upholstery)
 export(tagfilter_wallpaper)
+export(tagfilter_weapon)
 export(tagfilter_weaving)
+export(tagfilter_well)
+export(tagfilter_wineobject)
+export(tagfilter_wood)
+export(tagfilter_woodobject)
 export(tagfilter_yarn)
+importFrom(quanteda,corpus)
 importFrom(readtext,readtext)
 importFrom(textcat,textcat)
