--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Version: 0.1
 Title: Process Avisblatt Data
 Description: Processing ads level data from the Basler Avisblatt. 
-Author: "Matthias Bannert <bannert@kof.ethz.ch> [aut, cre], Alexander Engel[aut], Anna Reimann [aut], Ina Serif[aut]"
+Author: "Matthias Bannert <matthias.bannert@gmail.com> [aut, cre], Alexander Engel[aut], Anna Reimann [aut], Ina Serif[aut]"
 Depends:
     R (>= 3.5),
 Imports:
@@ -18,7 +18,7 @@ VignetteBuilder: knitr
 Date: 2020-02-13
 License: GPL-2
 URL: https://github.com/mbannert/avisblatt
-BugReports: https://github.com/mbannert/avisblatt
+BugReports: https://github.com/mbannert/avisblatt/issues
 LazyData: true
 Maintainer: 'Matthias Bannert' <matthias.bannert@gmail.com>
 RoxygenNote: 7.0.0
