added logical isheader to meta info + method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(correct_ocr)
 export(detect_lang)
 export(get_subcorpus_by_id)
 export(get_text_by_id)
+export(merge_collections)
 export(read_collection)
 export(tagfilter_agriculture)
 export(tagfilter_animal)
