fixed filters with syntax issues, introduced apply filter method to facilitate collection creation..

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ export(tagfilter_riding)
 export(tagfilter_rope)
 export(tagfilter_saledemand)
 export(tagfilter_saleoffer)
+export(tagfilter_secondhand)
 export(tagfilter_shoes)
 export(tagfilter_shopequip)
 export(tagfilter_sleepwear)
