fixed some documentation issues, bumped version up

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(tagfilter_death)
 export(tagfilter_divider)
 export(tagfilter_domestic)
 export(tagfilter_dung)
+export(tagfilter_exchange)
 export(tagfilter_extinguisher)
 export(tagfilter_feed)
 export(tagfilter_finance)
@@ -67,7 +68,7 @@ export(tagfilter_key)
 export(tagfilter_kitchen)
 export(tagfilter_knitting)
 export(tagfilter_labor)
-export(tagfilter_labourandinfo)
+export(tagfilter_labourinfo)
 export(tagfilter_lenddemand)
 export(tagfilter_lendoffer)
 export(tagfilter_lighting)
@@ -119,6 +120,7 @@ export(tagfilter_tobacco)
 export(tagfilter_tool)
 export(tagfilter_toy)
 export(tagfilter_transport)
+export(tagfilter_travel)
 export(tagfilter_trolley)
 export(tagfilter_umbrella)
 export(tagfilter_underwear)
