fixed NAMESPACE conflict, package builds again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,7 +68,7 @@ export(tagfilter_key)
 export(tagfilter_kitchen)
 export(tagfilter_knitting)
 export(tagfilter_labor)
-export(tagfilter_labourinfo)
+export(tagfilter_labourandinfo)
 export(tagfilter_lenddemand)
 export(tagfilter_lendoffer)
 export(tagfilter_lighting)
