added the corrections dataset for 1754, need to document this

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(tagfilter_carpet)
 export(tagfilter_carriage)
 export(tagfilter_chair)
 export(tagfilter_charity)
+export(tagfilter_charityheader)
 export(tagfilter_churchseat)
 export(tagfilter_cloth)
 export(tagfilter_clothing)
@@ -41,15 +42,18 @@ export(tagfilter_cooking)
 export(tagfilter_costume)
 export(tagfilter_cutlery)
 export(tagfilter_death)
+export(tagfilter_demand)
 export(tagfilter_divider)
 export(tagfilter_domestic)
 export(tagfilter_dung)
+export(tagfilter_election)
 export(tagfilter_exchange)
 export(tagfilter_extinguisher)
 export(tagfilter_feed)
 export(tagfilter_finance)
 export(tagfilter_firestart)
 export(tagfilter_firework)
+export(tagfilter_foreigners)
 export(tagfilter_game)
 export(tagfilter_garden)
 export(tagfilter_glasses)
@@ -68,7 +72,7 @@ export(tagfilter_key)
 export(tagfilter_kitchen)
 export(tagfilter_knitting)
 export(tagfilter_labor)
-export(tagfilter_labourandinfo)
+export(tagfilter_labourinfo)
 export(tagfilter_lenddemand)
 export(tagfilter_lendoffer)
 export(tagfilter_lighting)
@@ -77,11 +81,13 @@ export(tagfilter_lotto)
 export(tagfilter_marriage)
 export(tagfilter_measure)
 export(tagfilter_mercery)
+export(tagfilter_merkwuerdig)
 export(tagfilter_mirror)
 export(tagfilter_mischousehold)
 export(tagfilter_miscobject)
 export(tagfilter_naturalia)
 export(tagfilter_neck)
+export(tagfilter_offer)
 export(tagfilter_official)
 export(tagfilter_other)
 export(tagfilter_othernews)
@@ -90,9 +96,11 @@ export(tagfilter_petobject)
 export(tagfilter_placement)
 export(tagfilter_plant)
 export(tagfilter_plantraw)
+export(tagfilter_prices)
 export(tagfilter_print)
 export(tagfilter_pushchair)
 export(tagfilter_real_estate)
+export(tagfilter_registry)
 export(tagfilter_riding)
 export(tagfilter_rope)
 export(tagfilter_saledemand)
