Some more header tagging
- In rawdata.R, mMerge false section headers to single ad which they are actually heading
- some tweaks in concerning header tagfilters
- had to rerun roxygen to account for new / renamed tagfilters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_text_by_id)
 export(merge_collections)
 export(read_collection)
 export(tagfilter_agriculture)
+export(tagfilter_alcohol)
 export(tagfilter_animal)
 export(tagfilter_animalraw)
 export(tagfilter_antique)
@@ -26,8 +27,10 @@ export(tagfilter_bizpromo)
 export(tagfilter_bling)
 export(tagfilter_board)
 export(tagfilter_bookstore)
+export(tagfilter_broth)
 export(tagfilter_building)
 export(tagfilter_bureau)
+export(tagfilter_butter)
 export(tagfilter_cabinet)
 export(tagfilter_cane)
 export(tagfilter_carpet)
@@ -35,18 +38,25 @@ export(tagfilter_carriage)
 export(tagfilter_chair)
 export(tagfilter_charity)
 export(tagfilter_charityheader)
+export(tagfilter_cheese)
+export(tagfilter_chocolate)
 export(tagfilter_churchseat)
 export(tagfilter_cloth)
 export(tagfilter_clothing)
+export(tagfilter_coffee)
 export(tagfilter_container)
 export(tagfilter_cooking)
 export(tagfilter_costume)
+export(tagfilter_curious)
 export(tagfilter_cutlery)
 export(tagfilter_death)
 export(tagfilter_demand)
+export(tagfilter_denaturalisation)
 export(tagfilter_divider)
 export(tagfilter_domestic)
+export(tagfilter_driedfruit)
 export(tagfilter_dung)
+export(tagfilter_eggs)
 export(tagfilter_election)
 export(tagfilter_exchange)
 export(tagfilter_extinguisher)
@@ -54,10 +64,13 @@ export(tagfilter_feed)
 export(tagfilter_finance)
 export(tagfilter_firestart)
 export(tagfilter_firework)
+export(tagfilter_fish)
 export(tagfilter_foreigners)
+export(tagfilter_fruit)
 export(tagfilter_game)
 export(tagfilter_garden)
 export(tagfilter_glasses)
+export(tagfilter_grain)
 export(tagfilter_grocery)
 export(tagfilter_hand)
 export(tagfilter_handkerchief)
@@ -65,8 +78,10 @@ export(tagfilter_hay)
 export(tagfilter_headdress)
 export(tagfilter_health)
 export(tagfilter_homedeco)
+export(tagfilter_honey)
 export(tagfilter_household_goods)
 export(tagfilter_info)
+export(tagfilter_insolvency)
 export(tagfilter_instrument)
 export(tagfilter_jewellery)
 export(tagfilter_key)
@@ -74,6 +89,7 @@ export(tagfilter_kitchen)
 export(tagfilter_knitting)
 export(tagfilter_labor)
 export(tagfilter_labourinfo)
+export(tagfilter_legumes)
 export(tagfilter_lenddemand)
 export(tagfilter_lendoffer)
 export(tagfilter_lighting)
@@ -81,24 +97,36 @@ export(tagfilter_lostandfound)
 export(tagfilter_lotto)
 export(tagfilter_marriage)
 export(tagfilter_measure)
+export(tagfilter_meat)
 export(tagfilter_mercery)
-export(tagfilter_merkwuerdig)
+export(tagfilter_merge_to_ad)
+export(tagfilter_milk)
+export(tagfilter_mineralwater)
 export(tagfilter_mirror)
 export(tagfilter_mischousehold)
 export(tagfilter_miscobject)
+export(tagfilter_mushrooms)
 export(tagfilter_naturalia)
+export(tagfilter_naturalisation)
 export(tagfilter_neck)
+export(tagfilter_nuts)
 export(tagfilter_offer)
 export(tagfilter_official)
+export(tagfilter_oil)
 export(tagfilter_other)
 export(tagfilter_othernews)
 export(tagfilter_outerwear)
+export(tagfilter_pasta)
+export(tagfilter_pastry)
 export(tagfilter_petobject)
 export(tagfilter_placement)
 export(tagfilter_plant)
 export(tagfilter_plantraw)
+export(tagfilter_poultry)
+export(tagfilter_preserves)
 export(tagfilter_prices)
 export(tagfilter_print)
+export(tagfilter_propertysaleoffer)
 export(tagfilter_pushchair)
 export(tagfilter_real_estate)
 export(tagfilter_registry)
@@ -111,30 +139,37 @@ export(tagfilter_shoes)
 export(tagfilter_shopequip)
 export(tagfilter_sleepwear)
 export(tagfilter_soil)
+export(tagfilter_spices)
 export(tagfilter_spinning)
 export(tagfilter_stationary)
 export(tagfilter_storage)
 export(tagfilter_stove)
+export(tagfilter_sugar)
 export(tagfilter_suitcase)
+export(tagfilter_syrup)
 export(tagfilter_table)
 export(tagfilter_tablelinen)
 export(tagfilter_tableware)
+export(tagfilter_tariffs)
 export(tagfilter_tavernobject)
-export(tagfilter_taxes)
+export(tagfilter_tea)
 export(tagfilter_texmaterial)
 export(tagfilter_textile)
 export(tagfilter_things)
 export(tagfilter_timepiece)
 export(tagfilter_tobacco)
+export(tagfilter_tobaccoproducts)
 export(tagfilter_tool)
 export(tagfilter_toy)
 export(tagfilter_transport)
 export(tagfilter_travel)
 export(tagfilter_trolley)
+export(tagfilter_tropicalfruit)
 export(tagfilter_umbrella)
 export(tagfilter_underwear)
 export(tagfilter_uniform)
 export(tagfilter_upholstery)
+export(tagfilter_vegetable)
 export(tagfilter_wallpaper)
 export(tagfilter_weapon)
 export(tagfilter_weaving)
@@ -153,4 +188,5 @@ importFrom(jsonlite,toJSON)
 importFrom(quanteda,corpus)
 importFrom(quanteda,docvars)
 importFrom(quanteda,texts)
+importFrom(quanteda,textstat_dist)
 importFrom(textcat,textcat)
