Re-arrangement of tagfilters
- Removed some superfluous  tagfilters from tagfilter_main
- Took property-related ads (housing, churchseats) and labour-related ads (including boarding and bizpromo) to separate files
- Renamed some filters, especially real_estate -> housing and labor -> employment
- Rebuild namespace accordingly
- minor bugfixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ export(merge_collections)
 export(read_collection)
 export(tagfilter_agriculture)
 export(tagfilter_alcohol)
-export(tagfilter_animal)
 export(tagfilter_animalraw)
 export(tagfilter_antique)
 export(tagfilter_art)
@@ -24,7 +23,6 @@ export(tagfilter_bathobject)
 export(tagfilter_bed)
 export(tagfilter_bedding)
 export(tagfilter_bizpromo)
-export(tagfilter_bling)
 export(tagfilter_board)
 export(tagfilter_bookstore)
 export(tagfilter_broth)
@@ -58,6 +56,7 @@ export(tagfilter_driedfruit)
 export(tagfilter_dung)
 export(tagfilter_eggs)
 export(tagfilter_election)
+export(tagfilter_employment)
 export(tagfilter_exchange)
 export(tagfilter_extinguisher)
 export(tagfilter_feed)
@@ -71,7 +70,6 @@ export(tagfilter_game)
 export(tagfilter_garden)
 export(tagfilter_glasses)
 export(tagfilter_grain)
-export(tagfilter_grocery)
 export(tagfilter_hand)
 export(tagfilter_handkerchief)
 export(tagfilter_hay)
@@ -80,21 +78,21 @@ export(tagfilter_health)
 export(tagfilter_homedeco)
 export(tagfilter_honey)
 export(tagfilter_household_goods)
-export(tagfilter_info)
+export(tagfilter_housing1)
+export(tagfilter_housing2)
 export(tagfilter_insolvency)
 export(tagfilter_instrument)
 export(tagfilter_jewellery)
 export(tagfilter_key)
 export(tagfilter_kitchen)
 export(tagfilter_knitting)
-export(tagfilter_labor)
 export(tagfilter_labourinfo)
 export(tagfilter_legumes)
 export(tagfilter_lenddemand)
 export(tagfilter_lendoffer)
 export(tagfilter_lighting)
 export(tagfilter_lostandfound)
-export(tagfilter_lotto)
+export(tagfilter_lottery)
 export(tagfilter_marriage)
 export(tagfilter_measure)
 export(tagfilter_meat)
@@ -113,7 +111,6 @@ export(tagfilter_nuts)
 export(tagfilter_offer)
 export(tagfilter_official)
 export(tagfilter_oil)
-export(tagfilter_other)
 export(tagfilter_othernews)
 export(tagfilter_outerwear)
 export(tagfilter_pasta)
@@ -128,7 +125,6 @@ export(tagfilter_prices)
 export(tagfilter_print)
 export(tagfilter_propertysaleoffer)
 export(tagfilter_pushchair)
-export(tagfilter_real_estate)
 export(tagfilter_registry)
 export(tagfilter_riding)
 export(tagfilter_rope)
@@ -154,14 +150,11 @@ export(tagfilter_tariffs)
 export(tagfilter_tavernobject)
 export(tagfilter_tea)
 export(tagfilter_texmaterial)
-export(tagfilter_textile)
-export(tagfilter_things)
 export(tagfilter_timepiece)
 export(tagfilter_tobacco)
 export(tagfilter_tobaccoproducts)
 export(tagfilter_tool)
 export(tagfilter_toy)
-export(tagfilter_transport)
 export(tagfilter_travel)
 export(tagfilter_trolley)
 export(tagfilter_tropicalfruit)
