Added function to provide umbrella terms for tags
This function will be used in the collection creation process, to add umbrella tags for groups of specific tags (like "food" for all foods)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,7 +77,6 @@ export(tagfilter_headdress)
 export(tagfilter_health)
 export(tagfilter_homedeco)
 export(tagfilter_honey)
-export(tagfilter_household_goods)
 export(tagfilter_housing1)
 export(tagfilter_housing2)
 export(tagfilter_insolvency)
@@ -171,6 +170,7 @@ export(tagfilter_wineobject)
 export(tagfilter_wood)
 export(tagfilter_woodobject)
 export(tagfilter_yarn)
+export(umbrella_terms)
 export(write_collection)
 import(data.table)
 import(quanteda)
