--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(get_subcorpus_by_id)
 export(get_text_by_id)
 export(merge_collections)
 export(read_collection)
-export(tagfilter_agriculture)
+export(tagfilter_agriculturalobjects)
 export(tagfilter_alcohol)
 export(tagfilter_animalraw)
 export(tagfilter_antique)
@@ -26,7 +26,7 @@ export(tagfilter_bizpromo)
 export(tagfilter_board)
 export(tagfilter_bookstore)
 export(tagfilter_broth)
-export(tagfilter_building)
+export(tagfilter_buildingcomponents)
 export(tagfilter_bureau)
 export(tagfilter_butter)
 export(tagfilter_cabinet)
@@ -77,8 +77,14 @@ export(tagfilter_headdress)
 export(tagfilter_health)
 export(tagfilter_homedeco)
 export(tagfilter_honey)
-export(tagfilter_housing1)
-export(tagfilter_housing2)
+export(tagfilter_housing_other1)
+export(tagfilter_housing_other2)
+export(tagfilter_housing_rent1)
+export(tagfilter_housing_rent2)
+export(tagfilter_housing_sale1)
+export(tagfilter_housing_sale2)
+export(tagfilter_housing_sale3)
+export(tagfilter_housing_sale4)
 export(tagfilter_insolvency)
 export(tagfilter_instrument)
 export(tagfilter_jewellery)
@@ -123,6 +129,7 @@ export(tagfilter_preserves)
 export(tagfilter_prices)
 export(tagfilter_print)
 export(tagfilter_propertysaleoffer)
+export(tagfilter_ps)
 export(tagfilter_pushchair)
 export(tagfilter_registry)
 export(tagfilter_riding)
@@ -150,11 +157,12 @@ export(tagfilter_tavernobject)
 export(tagfilter_tea)
 export(tagfilter_texmaterial)
 export(tagfilter_timepiece)
-export(tagfilter_tobacco)
+export(tagfilter_tobaccoobjects)
 export(tagfilter_tobaccoproducts)
 export(tagfilter_tool)
 export(tagfilter_toy)
 export(tagfilter_travel)
+export(tagfilter_travelheader)
 export(tagfilter_trolley)
 export(tagfilter_tropicalfruit)
 export(tagfilter_umbrella)
