--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,8 +22,9 @@ export(tagfilter_barrel)
 export(tagfilter_bathobject)
 export(tagfilter_bed)
 export(tagfilter_bedding)
-export(tagfilter_bizpromo)
-export(tagfilter_board)
+export(tagfilter_bizpromo1)
+export(tagfilter_bizpromo2)
+export(tagfilter_boarding)
 export(tagfilter_bookstore)
 export(tagfilter_broth)
 export(tagfilter_buildingcomponents)
@@ -56,7 +57,8 @@ export(tagfilter_driedfruit)
 export(tagfilter_dung)
 export(tagfilter_eggs)
 export(tagfilter_election)
-export(tagfilter_employment)
+export(tagfilter_employment1)
+export(tagfilter_employment2)
 export(tagfilter_exchange)
 export(tagfilter_extinguisher)
 export(tagfilter_feed)
@@ -81,6 +83,7 @@ export(tagfilter_housing_other1)
 export(tagfilter_housing_other2)
 export(tagfilter_housing_rent1)
 export(tagfilter_housing_rent2)
+export(tagfilter_housing_rent3)
 export(tagfilter_housing_sale1)
 export(tagfilter_housing_sale2)
 export(tagfilter_housing_sale3)
