--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,8 @@ export(tagfilter_cane)
 export(tagfilter_carpet)
 export(tagfilter_carriage)
 export(tagfilter_chair)
-export(tagfilter_charity)
+export(tagfilter_charity1)
+export(tagfilter_charity2)
 export(tagfilter_charityheader)
 export(tagfilter_cheese)
 export(tagfilter_chocolate)
@@ -99,7 +100,9 @@ export(tagfilter_legumes)
 export(tagfilter_lenddemand)
 export(tagfilter_lendoffer)
 export(tagfilter_lighting)
-export(tagfilter_lostandfound)
+export(tagfilter_lostandfound1)
+export(tagfilter_lostandfound2)
+export(tagfilter_lostandfoundheader)
 export(tagfilter_lottery)
 export(tagfilter_marriage)
 export(tagfilter_measure)
@@ -130,7 +133,8 @@ export(tagfilter_plantraw)
 export(tagfilter_poultry)
 export(tagfilter_preserves)
 export(tagfilter_prices)
-export(tagfilter_print)
+export(tagfilter_print1)
+export(tagfilter_print2)
 export(tagfilter_propertysaleoffer)
 export(tagfilter_ps)
 export(tagfilter_pushchair)
@@ -164,7 +168,8 @@ export(tagfilter_tobaccoobjects)
 export(tagfilter_tobaccoproducts)
 export(tagfilter_tool)
 export(tagfilter_toy)
-export(tagfilter_travel)
+export(tagfilter_travel1)
+export(tagfilter_travel2)
 export(tagfilter_travelheader)
 export(tagfilter_trolley)
 export(tagfilter_tropicalfruit)
