--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(merge_collections)
 export(read_collection)
 export(tagfilter_agriculturalobjects)
 export(tagfilter_alcohol)
+export(tagfilter_animalobjects)
 export(tagfilter_animalraw)
 export(tagfilter_antique)
 export(tagfilter_art)
@@ -22,6 +23,7 @@ export(tagfilter_barrel)
 export(tagfilter_bathobject)
 export(tagfilter_bed)
 export(tagfilter_bedding)
+export(tagfilter_birds)
 export(tagfilter_bizpromo1)
 export(tagfilter_bizpromo2)
 export(tagfilter_boarding)
@@ -34,6 +36,7 @@ export(tagfilter_cabinet)
 export(tagfilter_cane)
 export(tagfilter_carpet)
 export(tagfilter_carriage)
+export(tagfilter_cats)
 export(tagfilter_chair)
 export(tagfilter_charity1)
 export(tagfilter_charity2)
@@ -50,9 +53,10 @@ export(tagfilter_costume)
 export(tagfilter_curious)
 export(tagfilter_cutlery)
 export(tagfilter_death)
-export(tagfilter_demand)
+export(tagfilter_demanding)
 export(tagfilter_denaturalisation)
 export(tagfilter_divider)
+export(tagfilter_dogs)
 export(tagfilter_domestic)
 export(tagfilter_driedfruit)
 export(tagfilter_dung)
@@ -63,7 +67,8 @@ export(tagfilter_employment2)
 export(tagfilter_exchange)
 export(tagfilter_extinguisher)
 export(tagfilter_feed)
-export(tagfilter_finance)
+export(tagfilter_finance_loan)
+export(tagfilter_finance_sale)
 export(tagfilter_firestart)
 export(tagfilter_firework)
 export(tagfilter_fish)
@@ -89,6 +94,7 @@ export(tagfilter_housing_sale1)
 export(tagfilter_housing_sale2)
 export(tagfilter_housing_sale3)
 export(tagfilter_housing_sale4)
+export(tagfilter_housing_sale5)
 export(tagfilter_insolvency)
 export(tagfilter_instrument)
 export(tagfilter_jewellery)
@@ -100,6 +106,7 @@ export(tagfilter_legumes)
 export(tagfilter_lenddemand)
 export(tagfilter_lendoffer)
 export(tagfilter_lighting)
+export(tagfilter_livestock)
 export(tagfilter_lostandfound1)
 export(tagfilter_lostandfound2)
 export(tagfilter_lostandfoundheader)
@@ -119,10 +126,11 @@ export(tagfilter_naturalia)
 export(tagfilter_naturalisation)
 export(tagfilter_neck)
 export(tagfilter_nuts)
-export(tagfilter_offer)
+export(tagfilter_offering)
 export(tagfilter_official)
 export(tagfilter_oil)
 export(tagfilter_othernews)
+export(tagfilter_otherpets)
 export(tagfilter_outerwear)
 export(tagfilter_pasta)
 export(tagfilter_pastry)
