Adapted code for Quanteda 3.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,5 +204,5 @@ importFrom(jsonlite,toJSON)
 importFrom(quanteda,corpus)
 importFrom(quanteda,docvars)
 importFrom(quanteda,texts)
-importFrom(quanteda,textstat_dist)
+importFrom(quanteda.textstats,textstat_dist)
 importFrom(textcat,textcat)
