--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(tagfilter_birds)
 export(tagfilter_bizpromo1)
 export(tagfilter_bizpromo2)
 export(tagfilter_boarding)
+export(tagfilter_boardingheader)
 export(tagfilter_bookstore)
 export(tagfilter_broth)
 export(tagfilter_buildingcomponents)
@@ -50,6 +51,7 @@ export(tagfilter_coffee)
 export(tagfilter_container)
 export(tagfilter_cooking)
 export(tagfilter_costume)
+export(tagfilter_crime)
 export(tagfilter_curious)
 export(tagfilter_cutlery)
 export(tagfilter_death)
@@ -143,6 +145,10 @@ export(tagfilter_preserves)
 export(tagfilter_prices)
 export(tagfilter_print1)
 export(tagfilter_print2)
+export(tagfilter_print4)
+export(tagfilter_print5)
+export(tagfilter_print6)
+export(tagfilter_print7)
 export(tagfilter_propertysaleoffer)
 export(tagfilter_ps)
 export(tagfilter_pushchair)
