--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,8 @@ export(tagfilter_bedding)
 export(tagfilter_birds)
 export(tagfilter_bizpromo1)
 export(tagfilter_bizpromo2)
-export(tagfilter_boarding)
+export(tagfilter_boarding1)
+export(tagfilter_boarding2)
 export(tagfilter_boardingheader)
 export(tagfilter_bookstore)
 export(tagfilter_broth)
@@ -66,6 +67,8 @@ export(tagfilter_eggs)
 export(tagfilter_election)
 export(tagfilter_employment1)
 export(tagfilter_employment2)
+export(tagfilter_employmentoffer)
+export(tagfilter_employmentseeking)
 export(tagfilter_exchange)
 export(tagfilter_extinguisher)
 export(tagfilter_feed)
@@ -100,6 +103,8 @@ export(tagfilter_housing_sale5)
 export(tagfilter_insolvency)
 export(tagfilter_instrument)
 export(tagfilter_jewellery)
+export(tagfilter_joboffer)
+export(tagfilter_jobseek)
 export(tagfilter_key)
 export(tagfilter_kitchen)
 export(tagfilter_knitting)
@@ -149,6 +154,7 @@ export(tagfilter_print4)
 export(tagfilter_print5)
 export(tagfilter_print6)
 export(tagfilter_print7)
+export(tagfilter_print8)
 export(tagfilter_propertysaleoffer)
 export(tagfilter_ps)
 export(tagfilter_pushchair)
