Cleanup and tagfilter validation function
- kicked some old functions from before our collection concept
- updated NAMESPACE
- introduced function tf_integrity(). This will go through all tagfilters line by line, check if the regex is valid, and notifies if not

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(Collection)
 export(RawData)
-export(avis_create_corpus)
 export(avis_stop)
 export(clean_manual_tags)
 export(correct_ocr)
@@ -150,11 +149,11 @@ export(tagfilter_preserves)
 export(tagfilter_prices)
 export(tagfilter_print1)
 export(tagfilter_print2)
-export(tagfilter_print4)
 export(tagfilter_print5)
 export(tagfilter_print6)
 export(tagfilter_print7)
 export(tagfilter_print8)
+export(tagfilter_print9)
 export(tagfilter_propertysaleoffer)
 export(tagfilter_ps)
 export(tagfilter_pushchair)
@@ -208,9 +207,9 @@ export(tagfilter_yarn)
 export(umbrella_terms)
 export(write_collection)
 import(data.table)
+import(dplyr, except = c(first, last, between))
 import(quanteda)
 importFrom(R6,R6Class)
-importFrom(data.table,fread)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(quanteda,corpus)
