Added functionality to collection creation process
- map as many Freizo IDs to Transkribus records as possible
- include fragments to XDI records

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,7 @@ export(merge_collections)
 export(rawdata_apply_ocr)
 export(rawdata_coll_creation)
 export(rawdata_fraternaltwin_detection)
-export(rawdata_header_creation)
+export(rawdata_header_and_id)
 export(rawdata_redo_tags)
 export(rawdata_reprint_detection)
 export(read_collection)
