Added analysis scripts, updated fragment coordination calculation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Collection)
 export(RawData)
 export(avis_create_corpus)
 export(avis_stop)
+export(calculate_frequency_data)
 export(clean_manual_tags)
 export(correct_ocr)
 export(detect_lang)
@@ -11,6 +12,7 @@ export(fetch_from_freizo)
 export(get_subcorpus_by_id)
 export(get_text_by_id)
 export(merge_collections)
+export(plot_frequency_data)
 export(rawdata_apply_ocr)
 export(rawdata_coll_creation)
 export(rawdata_fraternaltwin_detection)
@@ -18,6 +20,7 @@ export(rawdata_header_and_id)
 export(rawdata_redo_tags)
 export(rawdata_reprint_detection)
 export(read_collection)
+export(show_wordcloud)
 export(tagfilter_agriculturalobjects)
 export(tagfilter_alcohol)
 export(tagfilter_animalobjects)
@@ -227,7 +230,11 @@ export(xml_direct_import)
 import(XML)
 import(data.table)
 import(dplyr, except = c(first, last, between))
+import(ggplot2)
+import(hrbrthemes)
 import(quanteda)
+import(quanteda.textplots)
+import(viridis)
 importFrom(R6,R6Class)
 importFrom(data.table,fread)
 importFrom(jsonlite,fromJSON)
@@ -237,3 +244,4 @@ importFrom(quanteda,docvars)
 importFrom(quanteda,texts)
 importFrom(quanteda.textstats,textstat_dist)
 importFrom(textcat,textcat)
+importFrom(zoo,"na.approx")
