--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,25 @@
 
 export(Collection)
 export(RawData)
+export(average_length_by_date)
 export(avis_create_corpus)
 export(avis_stop)
 export(calculate_frequency_data)
 export(clean_manual_tags)
 export(correct_ocr)
+export(count_records_by_date)
+export(count_records_by_length)
 export(detect_lang)
 export(fetch_from_freizo)
+export(get_headers)
+export(get_noadverts)
 export(get_subcorpus_by_id)
 export(get_text_by_id)
+export(group_records_by_header)
+export(group_records_by_length)
+export(group_records_by_tags)
+export(group_records_by_text)
+export(list_similar)
 export(merge_collections)
 export(plot_frequency_data)
 export(rawdata_apply_ocr)
@@ -20,6 +30,17 @@ export(rawdata_header_and_id)
 export(rawdata_redo_tags)
 export(rawdata_reprint_detection)
 export(read_collection)
+export(select_by_date)
+export(select_by_language)
+export(select_by_length)
+export(select_by_reprint_status)
+export(select_by_season)
+export(select_by_tags)
+export(select_by_text)
+export(show_headers)
+export(show_iiif)
+export(show_records)
+export(show_tags)
 export(show_wordcloud)
 export(tagfilter_agriculturalobjects)
 export(tagfilter_alcohol)
@@ -83,8 +104,9 @@ export(tagfilter_employmentseeking)
 export(tagfilter_exchange)
 export(tagfilter_extinguisher)
 export(tagfilter_feed)
-export(tagfilter_finance_loan)
-export(tagfilter_finance_sale)
+export(tagfilter_finance_loan1)
+export(tagfilter_finance_sale1)
+export(tagfilter_finance_sale2)
 export(tagfilter_firestart)
 export(tagfilter_firework)
 export(tagfilter_fish)
@@ -226,12 +248,14 @@ export(tagfilter_woodobject)
 export(tagfilter_yarn)
 export(umbrella_terms)
 export(write_collection)
+export(write_records)
 export(xml_direct_import)
 import(XML)
 import(data.table)
 import(dplyr, except = c(first, last, between))
 import(ggplot2)
 import(hrbrthemes)
+import(magick)
 import(quanteda)
 import(quanteda.textplots)
 import(viridis)
