added PoC for tagfilter documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(RawData)
 export(average_length_by_date)
 export(avis_create_corpus)
 export(avis_stop)
-export(calculate_frequency_data)
 export(clean_manual_tags)
 export(correct_ocr)
 export(count_records_by_date)
@@ -22,7 +21,6 @@ export(group_records_by_tags)
 export(group_records_by_text)
 export(list_similar)
 export(merge_collections)
-export(plot_frequency_data)
 export(rawdata_apply_ocr)
 export(rawdata_coll_creation)
 export(rawdata_fraternaltwin_detection)
@@ -33,12 +31,14 @@ export(read_collection)
 export(select_by_date)
 export(select_by_language)
 export(select_by_length)
+export(select_by_meta)
 export(select_by_reprint_status)
 export(select_by_season)
 export(select_by_tags)
 export(select_by_text)
 export(show_headers)
 export(show_iiif)
+export(show_metadatafields)
 export(show_records)
 export(show_tags)
 export(show_wordcloud)
@@ -184,6 +184,7 @@ export(tagfilter_poultry)
 export(tagfilter_preserves)
 export(tagfilter_prices)
 export(tagfilter_print1)
+export(tagfilter_print10)
 export(tagfilter_print2)
 export(tagfilter_print5)
 export(tagfilter_print6)
@@ -253,12 +254,9 @@ export(xml_direct_import)
 import(XML)
 import(data.table)
 import(dplyr, except = c(first, last, between))
-import(ggplot2)
-import(hrbrthemes)
 import(magick)
 import(quanteda)
 import(quanteda.textplots)
-import(viridis)
 importFrom(R6,R6Class)
 importFrom(data.table,fread)
 importFrom(jsonlite,fromJSON)
@@ -268,4 +266,3 @@ importFrom(quanteda,docvars)
 importFrom(quanteda,texts)
 importFrom(quanteda.textstats,textstat_dist)
 importFrom(textcat,textcat)
-importFrom(zoo,"na.approx")
