--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,9 @@ Imports:
     jsonlite (>= 1.1),
     R6,
     data.table,
-    quanteda (>= 2.0)
+    quanteda (>= 2.0),
+    quanteda.textstats,
+    textcat
 Suggests:
     knitr,
     testthat
@@ -21,5 +23,5 @@ URL: https://github.com/mbannert/avisblatt
 BugReports: https://github.com/mbannert/avisblatt/issues
 LazyData: true
 Maintainer: 'Matthias Bannert' <matthias.bannert@gmail.com>
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 Encoding: UTF-8
