first draft for hierarchical documentation of tagfilters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ export(tagfilter_exchange)
 export(tagfilter_extinguisher)
 export(tagfilter_feed)
 export(tagfilter_finance_loan1)
+export(tagfilter_finance_loan2)
 export(tagfilter_finance_sale1)
 export(tagfilter_finance_sale2)
 export(tagfilter_firestart)
