Samll tf fix and roxygenized

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ export(tagfilter_kitchen)
 export(tagfilter_knitting)
 export(tagfilter_labourinfo)
 export(tagfilter_legumes)
+export(tagfilter_lend)
 export(tagfilter_lenddemand)
 export(tagfilter_lendoffer)
 export(tagfilter_lighting)
@@ -178,7 +179,6 @@ export(tagfilter_outerwear)
 export(tagfilter_pasta)
 export(tagfilter_pastry)
 export(tagfilter_petobject)
-export(tagfilter_placement)
 export(tagfilter_plant)
 export(tagfilter_plantraw)
 export(tagfilter_poultry)
@@ -187,6 +187,8 @@ export(tagfilter_prices)
 export(tagfilter_print1)
 export(tagfilter_print10)
 export(tagfilter_print2)
+export(tagfilter_print3)
+export(tagfilter_print4)
 export(tagfilter_print5)
 export(tagfilter_print6)
 export(tagfilter_print7)
@@ -248,6 +250,7 @@ export(tagfilter_wineobject)
 export(tagfilter_wood)
 export(tagfilter_woodobject)
 export(tagfilter_yarn)
+export(tf_ignorecase)
 export(umbrella_terms)
 export(write_collection)
 export(write_records)
