--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,25 +2,14 @@
 
 export(Collection)
 export(RawData)
-export(average_length_by_date)
 export(avis_create_corpus)
 export(avis_stop)
 export(clean_manual_tags)
 export(correct_ocr)
-export(count_records_by_date)
-export(count_records_by_length)
 export(detect_lang)
-export(fetch_from_freizo)
-export(get_headers)
-export(get_noadverts)
+export(fetch_from_hasdai)
 export(get_subcorpus_by_id)
 export(get_text_by_id)
-export(group_records_by_header)
-export(group_records_by_length)
-export(group_records_by_tags)
-export(group_records_by_text)
-export(list_similar)
-export(merge_collections)
 export(rawdata_apply_ocr)
 export(rawdata_coll_creation)
 export(rawdata_fraternaltwin_detection)
@@ -28,20 +17,6 @@ export(rawdata_header_and_id)
 export(rawdata_redo_tags)
 export(rawdata_reprint_detection)
 export(read_collection)
-export(select_by_date)
-export(select_by_language)
-export(select_by_length)
-export(select_by_meta)
-export(select_by_reprint_status)
-export(select_by_season)
-export(select_by_tags)
-export(select_by_text)
-export(show_headers)
-export(show_iiif)
-export(show_metadatafields)
-export(show_records)
-export(show_tags)
-export(show_wordcloud)
 export(tagfilter_agriculturalobjects)
 export(tagfilter_alcohol)
 export(tagfilter_animalobjects)
@@ -226,12 +201,17 @@ export(tagfilter_tobaccoobjects)
 export(tagfilter_tobaccoproducts)
 export(tagfilter_tool)
 export(tagfilter_toy)
+export(tagfilter_transactiontype_auction1)
+export(tagfilter_transactiontype_auction2)
+export(tagfilter_transactiontype_lend1)
 export(tagfilter_transactiontype_offer1)
 export(tagfilter_transactiontype_offer2)
 export(tagfilter_transactiontype_offer3)
 export(tagfilter_transactiontype_request1)
 export(tagfilter_transactiontype_request2)
 export(tagfilter_transactiontype_request3)
+export(tagfilter_transactiontype_sale1)
+export(tagfilter_transactiontype_swap1)
 export(tagfilter_travel1)
 export(tagfilter_travel2)
 export(tagfilter_travelheader)
@@ -253,14 +233,9 @@ export(tagfilter_yarn)
 export(tf_ignorecase)
 export(umbrella_terms)
 export(write_collection)
-export(write_records)
-export(xml_direct_import)
-import(XML)
 import(data.table)
 import(dplyr, except = c(first, last, between))
-import(magick)
 import(quanteda)
-import(quanteda.textplots)
 importFrom(R6,R6Class)
 importFrom(data.table,fread)
 importFrom(jsonlite,fromJSON)
