Added export functions; clean-up

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Collection)
 export(RawData)
 export(avis_create_corpus)
 export(avis_stop)
+export(build_siblings_table)
 export(clean_manual_tags)
 export(correct_ocr)
 export(detect_lang)
