--- a/NAMESPACE
+++ b/NAMESPACE
@@ -226,12 +226,17 @@ export(tagfilter_tobaccoobjects)
 export(tagfilter_tobaccoproducts)
 export(tagfilter_tool)
 export(tagfilter_toy)
+export(tagfilter_transactiontype_auction1)
+export(tagfilter_transactiontype_auction2)
+export(tagfilter_transactiontype_lend1)
 export(tagfilter_transactiontype_offer1)
 export(tagfilter_transactiontype_offer2)
 export(tagfilter_transactiontype_offer3)
 export(tagfilter_transactiontype_request1)
 export(tagfilter_transactiontype_request2)
 export(tagfilter_transactiontype_request3)
+export(tagfilter_transactiontype_sale1)
+export(tagfilter_transactiontype_swap1)
 export(tagfilter_travel1)
 export(tagfilter_travel2)
 export(tagfilter_travelheader)
