flesh to the bone for README, cleaning up core r/w functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(count_records_by_date)
 export(count_records_by_length)
 export(detect_lang)
 export(fetch_from_freizo)
+export(gather_yearly_collections)
 export(get_headers)
 export(get_noadverts)
 export(get_subcorpus_by_id)
