stripping down CRAN check erorrs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -272,7 +272,10 @@ importFrom(data.table,fread)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(quanteda,corpus)
+importFrom(quanteda,corpus_subset)
 importFrom(quanteda,docvars)
 importFrom(quanteda,texts)
 importFrom(quanteda.textstats,textstat_dist)
 importFrom(textcat,textcat)
+importFrom(textutils,HTMLdecode)
+importFrom(utils,read.csv)
