escaping on ascii chars, wip

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -275,6 +275,7 @@ importFrom(quanteda,corpus_subset)
 importFrom(quanteda,docvars)
 importFrom(quanteda,texts)
 importFrom(quanteda.textstats,textstat_dist)
+importFrom(stringi,stri_unescape_unicode)
 importFrom(textcat,textcat)
 importFrom(textutils,HTMLdecode)
 importFrom(utils,read.csv)
