accounting for global vars NOTE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -275,7 +275,11 @@ importFrom(quanteda,corpus_subset)
 importFrom(quanteda,docvars)
 importFrom(quanteda,texts)
 importFrom(quanteda.textstats,textstat_dist)
+importFrom(stats,aggregate)
 importFrom(stringi,stri_unescape_unicode)
 importFrom(textcat,textcat)
 importFrom(textutils,HTMLdecode)
+importFrom(utils,download.file)
+importFrom(utils,head)
 importFrom(utils,read.csv)
+importFrom(utils,tail)
