no errors, no warnings, no Notes, YAY !!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -276,10 +276,12 @@ importFrom(quanteda,docvars)
 importFrom(quanteda,texts)
 importFrom(quanteda.textstats,textstat_dist)
 importFrom(stats,aggregate)
+importFrom(stats,na.omit)
 importFrom(stringi,stri_unescape_unicode)
 importFrom(textcat,textcat)
 importFrom(textutils,HTMLdecode)
 importFrom(utils,download.file)
+importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,read.csv)
 importFrom(utils,tail)
