--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Version: 0.3
 Title: Process Avisblatt Data
 Description: Processing ads level data from the Basler Avisblatt. 
-Author: "Matthias Bannert <matthias.bannert@gmail.com> [aut, cre], Alexander Engel[aut], Anna Reimann [aut], Ina Serif[aut]"
+Author: "Matthias Bannert <matthias.bannert@gmail.com> [aut, cre], Lars Dickmann [aut], Alexander Engel [aut], Anna Reimann [aut], Ina Serif [aut]"
 Depends:
     R (>= 4.1),
 Imports:
@@ -24,10 +24,10 @@ Suggests:
     rmarkdown,
     testthat
 VignetteBuilder: knitr
-Date: 2020-06-03
+Date: 2023-07-19
 License: GPL-2
-URL: https://github.com/mbannert/avisblatt
-BugReports: https://github.com/mbannert/avisblatt/issues
+URL: https://github.com/avisblatt/avisblatt
+BugReports: https://github.com/avisblatt/avisblatt/issues
 LazyData: true
 Maintainer: 'Matthias Bannert' <matthias.bannert@gmail.com>
 RoxygenNote: 7.2.1
